# Python-ROS-setup

devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
src/my_pkg/: CMakeLists.txt  setup.py
